--- a/misc/extras.html
+++ b/misc/extras.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1> <a href="/index.html"> Extras </a></h1> 
+    <h1> <a href="../index.html"> Extras </a></h1> 
 
     <p>
         This page is about the Miscellaneous HTML ideas, but you may also interested
